// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-bdDqHD sc-gtcySc dgJduv ddkfak"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-bdDqHD sc-gtcySc dEoVcY ddkfak"
>
  foo
</button>
`;
